--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <body>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrLnOQMJeGgajEF4hDQSiAX6VEylltzhHrHm7gdT-VQOa4lJ-3iKg02fhtBA8mVKstvon5W5h8sk9Z/pubhtml?gid=1498588011&amp;range=A1:E14&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false&amp"
 		width="100%"
-		height="950"
+		height="650"
 		style="background-color:black"
-		style="border: none;">
+		style="border: none">
 	</iframe>
 	<a class="weatherwidget-io" href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
 		data-label_1="SHAWNEE" 
