--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 		width="100%"
 		height="400"
 		style="background-color:black"
-		style="border: none">
+		style="border: none"
+		style="overflow:hidden" 
+		scrolling="no"
+		>
 	</iframe>
 	<a class="weatherwidget-io" href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
 		data-label_1="SHAWNEE" 
