--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
   
 </head>
 
-<body>
+<body style="overflow:hidden">
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrLnOQMJeGgajEF4hDQSiAX6VEylltzhHrHm7gdT-VQOa4lJ-3iKg02fhtBA8mVKstvon5W5h8sk9Z/pubhtml?gid=1498588011&amp;range=A1:E14&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false&amp"
 		width="100%"
 		height="400"
-		style="background-color:black"
+		frameborder="0"
+		style="background-color: black"
 		style="border: none"
-		style="overflow:hidden" 
+		style="overflow: hidden" 
 		scrolling="no"
 		>
 	</iframe>
