--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="styles/styles.css">
-
-  
+  <meta http-equiv="refresh" content="200">
+	
 </head>
 
 <body style="overflow:hidden" style="background-color: black">
