--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="styles/styles.css">
-  <meta http-equiv="refresh" content="200">
+
 	
 </head>
 
@@ -33,16 +33,14 @@
 		scrolling="no"
 		>
 	</iframe>
-	<a class="weatherwidget-io" href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
-		data-label_1="SHAWNEE" 
+	<a class="weatherwidget-io" 
+		href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
+		data-label_1="Shawnee" 
 		data-label_2="WEATHER" 
-		data-theme="dark" 
-		>SHAWNEE WEATHER</a>
-
+		data-theme="original" >
+		Shawnee WEATHER</a>
 <script>
-	!function(d,s,id)
-		{var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
 </body>
 </html>
