--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<head>
+<head style="background-color: black" style="border: none">
   <meta charset="utf-8">
 
   <title>TV</title>
@@ -24,7 +24,7 @@
 <body style="overflow:hidden" style="background-color: black">
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRrLnOQMJeGgajEF4hDQSiAX6VEylltzhHrHm7gdT-VQOa4lJ-3iKg02fhtBA8mVKstvon5W5h8sk9Z/pubhtml?gid=1498588011&amp;range=A1:E14&amp;single=true&amp;widget=false&amp;chrome=false&amp;headers=false&amp"
 		width="100%"
-		height="450"
+		height="440"
 		frameborder="0"
 		style="background-color: black"
 		style="border: none"
