--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head style="background-color: black" style="border: none">
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TV</title>
   <meta name="description" content="TV Display">
   <meta name="author" content="TD">
