--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="styles/styles.css">
-
+<meta http-equiv="refresh" content="300">
 	
 </head>
 
