--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="styles/styles.css">
-<meta http-equiv="refresh" content="300">
+ <meta http-equiv="refresh" content="30; url =
+  https://tdtvschedule.netlify.app/time-off" />
 	
 </head>
 
