--- a/time-off.html
+++ b/time-off.html
@@ -30,9 +30,14 @@ height="965"
 style="background-color:black"
 style="border: none;">
 </iframe>
-<a class="weatherwidget-io" href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" data-label_1="SHAWNEE" data-label_2="WEATHER" data-theme="dark" >SHAWNEE WEATHER</a>
+<a class="weatherwidget-io" 
+		href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
+		data-label_1="Shawnee" 
+		data-label_2="WEATHER" 
+		data-theme="original" >
+		Shawnee WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-  <script src="js/scripts.js"></script>
+  </script>
 </body>
 </html>
