--- a/weather.html
+++ b/weather.html
@@ -1,1 +1,33 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>TV</title>
+  <meta name="description" content="TV Display">
+  <meta name="author" content="TD">
+
+  <meta property="og:title" content="TV">
+  <meta property="og:description" content="TV Display">
+  <meta property="og:image" content="image.png">
+
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <meta http-equiv="refresh" content="45; url =
+  https://tdtvschedule.netlify.app/" />
+</head>
+
+<body>
+<iframe src="https://www.rainviewer.com/map.html?loc=38.9939,-94.6668,8&oFa=0&oC=1&oU=0&oCS=1&oF=0&oAP=1&c=3&o=90&lm=1&layer=radar&sm=1&sn=1&hu=0" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen></iframe>
+</iframe>
+
+<script>
+</script>
+</body>
+</html>
