--- a/weather.html
+++ b/weather.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<iframe src="https://www.rainviewer.com/map.html?loc=38.9939,-94.6668,8&oFa=0&oC=1&oU=0&oCS=1&oF=0&oAP=1&c=3&o=90&lm=1&layer=radar&sm=1&sn=1&hu=0" width="100%" frameborder="0" style="border:0;height:50vh;" allowfullscreen></iframe>
+<iframe src="https://www.rainviewer.com/map.html?loc=38.9939,-94.6668,8&oFa=0&oC=1&oU=0&oCS=1&oF=0&oAP=1&c=3&o=90&lm=1&layer=radar&sm=1&sn=1&hu=0" width="100%" frameborder="0" style="border:0;" allowfullscreen></iframe>
 </iframe>
 
 <script>
