--- a/weather.html
+++ b/weather.html
@@ -24,10 +24,16 @@
 </head>
 
 <body>
-<iframe src="https://www.rainviewer.com/map.html?loc=38.9939,-94.6668,8&oFa=0&oC=1&oU=0&oCS=1&oF=0&oAP=1&c=3&o=90&lm=1&layer=radar&sm=1&sn=1&hu=0" width="100%" height="1080" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://www.rainviewer.com/map.html?loc=38.9939,-94.6668,8&oFa=0&oC=1&oU=0&oCS=1&oF=0&oAP=1&c=3&o=90&lm=1&layer=radar&sm=1&sn=1&hu=0" width="100%" height="965" frameborder="0" allowfullscreen></iframe>
 </iframe>
-
+<a class="weatherwidget-io" 
+		href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
+		data-label_1="Shawnee" 
+		data-label_2="WEATHER" 
+		data-theme="original" >
+		Shawnee WEATHER</a>
 <script>
-</script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+  </script>
 </body>
 </html>
