--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 	</iframe>
 	<a class="weatherwidget-io" 
 		href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
-		data-label_1="Shawnee" 
-		data-label_2="WEATHER" 
+		<img src="/images/Turf-Design-Inc.png" alt="weather">
 		data-theme="original" >
 		Shawnee WEATHER</a>
 <script>
