--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 	</iframe>
 	<a class="weatherwidget-io" 
 		href="https://forecast7.com/en/39d02n94d72/shawnee/?unit=us" 
-		<img src="/images/Turf-Design-Inc.png" alt="weather">
-		data-theme="original" >
+		data-label_1="Shawnee" 
+		data-label_2="WEATHER"
 		Shawnee WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
